# cpp_school

./: .gitignore  CMakeLists.txt  PVS-Studio.lic  README.md  pvs-build.sh
test01/: input.txt  main.cpp
